--- a/style.css
+++ b/style.css
@@ -538,6 +538,14 @@ html.dark #dark-toggle:hover {
   flex-shrink: 0;
 }
 
+.proto-icon-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+  display: block;
+}
+
 .proto-card:hover .proto-icon-box {
   background: #eff6ff;
 }
