--- a/style.css
+++ b/style.css
@@ -541,7 +541,8 @@ html.dark #dark-toggle:hover {
 .proto-icon-img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
+  padding: 4px;
   border-radius: 10px;
   display: block;
 }
